--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -65,6 +65,9 @@
               <li class="nav-item mx-2">
                 <a href="{% url 'products' %}" class="nav-link text-white">All Products</a>
               </li>
+              <li class="nav-item mx-2">
+                <a href="{% url 'admin_orders' %}" class="nav-link text-white">Orders</a>
+              </li>
             {% endif %}
             <li class="nav-item dropdown mx-2">
               <a class="nav-link dropdown-toggle text-white" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
