--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -54,9 +54,6 @@
          </ul>
          <div>
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item mx-2">
-              <a href="{% url 'shopping_cart' %}" class="nav-link text-white"><span class="badge bg-danger">4</span> Cart </a>
-            </li>
           {% if request.user.is_authenticated %}
             {% if request.user.is_superuser %}
               <li class="nav-item mx-2">
@@ -69,6 +66,9 @@
                 <a href="{% url 'admin_orders' %}" class="nav-link text-white">Orders</a>
               </li>
             {% endif %}
+            <li class="nav-item mx-2">
+              <a href="{% url 'shopping_cart' %}" class="nav-link text-white"><span class="badge bg-danger"></span> Cart </a>
+            </li>
             <li class="nav-item dropdown mx-2">
               <a class="nav-link dropdown-toggle text-white" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Welcome {{ request.user.username | capfirst }}
