--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -4,23 +4,12 @@
 
 {% block banner_slider %}
 <!--Banner Slider-->
- <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="{% static 'main/images/banner/bg1.jpg' %}" class="d-block w-100" alt="..."> 
-    </div>
-    <div class="carousel-item">
-      <img src="{% static 'main/images/banner/bg2.jpg' %}" class="d-block w-100" alt="...">
+ <div>
+  <div>
+    <div>
+      <img src="{% static 'main/images/banner/background.jpg' %}" class="d-block w-100" alt="..."> 
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </a>
 </div>
 <!-- End Banner Slider -->
 {% endblock banner_slider %}
